--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,8 @@
 // Custom bootstrap variables must be set or imported *before* bootstrap.
-@import "bootstrap";
-@import "navbar";
+
+/*
+
+*= require_self
+*= require_tree .
+
+*/
